# rclone-mount-manager

./: .gitignore  CLAUDE.md  LICENSE  README.md  gen-icons.mjs  index.html  package-lock.json  package.json  vite.config.ts
scripts/: gen-icons.mjs  set-dmg-icon.sh
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lang.rs  lib.rs  main.rs  rclone.rs
src-tauri/src/lang/: menu.rs  mod.rs  state.rs  translate.rs
src-tauri/src/rclone/: config.rs  deps.rs  detect.rs  mod.rs  monitor.rs  mount.rs
src/api/: index.ts
src/components/: AboutDialog.vue  DependencyCheck.vue  MountForm.vue  MountList.vue
src/composables/: useToast.ts
src/locales/: en.ts  index.ts  zh.ts
src/stores/: mounts.ts  settings.ts
src/styles/: base.css  buttons.css  variables.css
src/types/: api.ts  deps.ts  index.ts  mount.ts
