[package]
name = "rclone-mount-manager"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
dirs = "5"
image = { version = "0.25", default-features = false, features = ["png"] }
thiserror = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
strip = true
